--- a/detail.html
+++ b/detail.html
@@ -65,7 +65,7 @@
                 <img src="./img/detail/Layer1.png" alt="">
             </div>
             <div class="anges">
-                <div class="ic" ><div  class="close"><img src="./img/detail/close.png"></div></div>
+                <a href="index.html" >      <div class="ic" ><div  class="close"><img src="./img/detail/close.png"></div></div></a>
                 <div class="ic" ><div  class="eng"><img src="./img/detail/prev.png" ></div></div>
                 <div class="ic" ><div  class="eng"><img src="./img/detail/next.png" ></div></div>
 
@@ -112,7 +112,11 @@
 
                         <div class="articleImg">
                             <img src="img/detail/img2.png" alt="">
+                        <div class="ban">
+                    <h3>Of late years the Manilla rope has in the American fishery almost
+                        entirely superseded hemp as a material for whale-line</h3>
                         </div>
+                            </div>
 
                             <p>
                         The whale-line is only two-thirds of an inch in thickness. At first sight, you
@@ -164,6 +168,17 @@
             </div>
 
         </section>
+        <section id="forum">
+            <div class="frm">
+            <form action="process.php" method="post">
+                <label for="user1">
+                    <div class="us"><i class="user"></i> </div>
+                    <input type="text" class="input-field"  id="user1"  name="user1" placeholder="Leave a message..." >
+                </label>
+            </form>
+            </div>
+        </section>
+
 
     </div>
 </div>
