--- a/detail.html
+++ b/detail.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Serhii Ovsianykov Test Task</title>
-    <script src="js/jQuery.js"></script>
-    <script src="js/script.js"></script>
+<!--    <script src="js/jQuery.js"></script>-->
+<!--    <script src="js/script.js"></script>-->
 </head>
 
 <body>
